language/move-lang/tests/move_check/translated_ir_tests/commands/invalid_fallthrough2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/invalid_fallthrough2.move:5:3 ───
   │
 5 │   x = 7
   │   ^^^^^ Unreachable code. This statement (and any following statements) will not be executed. In some cases, this will result in unused resource values.
   │

